<resources>
    <string name="app_name">IDo - Simple Todo List</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="pleaseEnterTitle">Please enter title</string>
    <string name="pleaseEnterContent">Please enter content</string>
    <string name="pleaseEnterDueDate">Please enter due date</string>
    <string name="pleaseEnterDueTime">Please enter due time</string>
    <string name="viewOrEditTodo">View/Edit Todo</string>
    <string name="createTodo">Create Todo</string>
    <string name="color">color</string>
    <string name="last_update">Last Update</string>
    <string name="due_date">Due Date</string>
    <string name="set_date">Set Date</string>
    <string name="set_time">Set Time</string>
    <string name="set_due_date">Set Due Date and Time</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="reminder_set_for">Reminder set for</string>
    <string name="about">About</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="sort_default">Default</string>
    <string name="sort_create">Sort by Create Date</string>
    <string name="sort_due">Sort by Due Date</string>
    <string name="image_empty_item">Image Empty Item</string>
    <string name="info_empty">There is no Todo available\nClick \'+\' to add new Todo</string>
    <string name="edit">Edit</string>
    <string name="nur_imam_masri">NUR IMAM MASRI</string>
    <string name="email">nurimammasri.01@gmail.com</string>
    <string name="nim">D121181322</string>
    <string name="costumize_your_todo">Costumize Your Todo</string>
    <string name="skip">Skip</string>
    <string name="intro_1">Have a lot of schedules and confused to arrange them?\nMake your todo list!</string>
    <string name="get_started">Get Started</string>
    <string name="header_splash">Bingung Mengatur Jadwal?\nBuat List Todo Kamu di IDo-SimpleTodoList</string>
    <string name="componen_bubble_splash">Componen Bubble Splash</string>
    <string name="logo_aplikasi">Logo Aolikasi</string>
    <string name="ido_desc">IDo - SimpleTodoList</string>
    <string name="justdecor">justDecor</string>
    <string name="image_intro">Image Intro</string>
    <string name="todo_list">Todo List</string>
    <string name="header">header</string>
    <string name="next">next</string>
    <string name="mark_as_finished">Mark as Done </string>
    <string name="mark_as_notfinish">Mark not Finished</string>
    <string name="delete_all_complete">Delete All Complete</string>
    <string name="delete_all">Delete All</string>
    <string name="passedDate">Date Passed, Enter Again</string>
    <string name="passedTime">Time Passed, Enter Again</string>
    <string name="set_notifications_1_hour_before">set notifications before 1 hour</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="setting">Setting</string>
    <string name="more_apps">More Apps</string>
    <string name="follow_us">Follow Us</string>
    <string name="instagram">Instagram</string>
    <string name="gmail">Email</string>
</resources>
