<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    card:cardCornerRadius="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <ImageView
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/delete"
            android:src="@drawable/ic_close" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_delete_all"
                android:layout_width="107dp"
                android:layout_height="30dp"
                android:layout_margin="24dp"
                android:background="@drawable/btn_delete"
                android:drawableStart="@drawable/ic_delete_finished"
                android:drawablePadding="5dp"
                android:fontFamily="@font/biko_bold"
                android:padding="5dp"
                android:text="@string/delete_all"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_delete_allcomplete"
                android:layout_width="165dp"
                android:layout_height="30dp"
                android:layout_margin="24dp"
                android:background="@drawable/btn_delete"

                android:drawableStart="@drawable/ic_delete_finished"
                android:drawablePadding="5dp"
                android:fontFamily="@font/biko_bold"
                android:padding="5dp"
                android:text="@string/delete_all_complete"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </LinearLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>